# aiointeractions

./: .readthedocs.yml  LICENSE  README.rst  main.py  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  tests.yml
aiointeractions/: __init__.py  app.py  utils.py
docs/: api.rst  changelog.rst  conf.py  faq.rst  getting_started.rst  index.rst  migrating_to_v2.rst
tests/: mock_interaction.json  test_interactions_handler.py  test_running.py
