[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "aiointeractions"
dynamic = ["version", "dependencies"]
description = "An async Discord HTTP Interactions wrapper for discord.py."
readme = "README.rst"
authors = [{name = "The Master"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.8"
keywords = ["discord"]


[project.optional-dependencies]
docs = ["discord.py", "sphinxawesome_theme"]


[tool.setuptools.dynamic]
version = {attr = "aiointeractions.__version__"}


[tool.black]
line-length = 125
skip-string-normalization = true


[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
