[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "aiointeractions"
dynamic = ["version"]
description = "An async Discord HTTP Interactions wrapper for discord.py."
readme = "README.rst"
authors = [{name = "The Master"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
    "discord.py>=2.0.0",
    "PyNaCl>=1.3.0"
]
keywords = ["discord"]


[project.optional-dependencies]
docs = ["sphinxawesome_theme"]
tests = ["pytest", "pytest-asyncio", "pytest-aiohttp"]


[project.urls]
Homepage = "http://github.com/TheMaster3558/aiointeractions"
Documentation = "http://aiointeractions.readthedocs.io/"


[tool.setuptools.dynamic]
version = {attr = "aiointeractions.__version__"}


[tool.black]
line-length = 125
skip-string-normalization = true


[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"


[tool.pytest.ini_options]
pythonpath = ["."]
filterwarnings = ["ignore::DeprecationWarning"]
